# Acoustics_brat

./: CMakeCache.txt  CMakeLists.txt  README  T211124.7z  full_A_b.cpp  integrate.cpp  integrate.py  main.cpp  main_header.hpp  plot.py  reader.cpp  reader.h
VasiaRemake/: main.cpp  read.me  reader.cpp
check/: info.txt
